--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,9 +1,12 @@
 name: Package
-
+on: workflow_dispatch
 jobs:
   Package:
     name: pack
-    runs-on: ubuntu-latest
+    runs-on: immortalwrt/opde:base
     steps:
       - name: Checkout
-      uses: actions/checkout@
+        uses: actions/checkout@openwrt-21.02
+      - name: pack_install
+        run: |
+          ./scripts/feeds update -a && ./scripts/feeds install -a
