--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,7 +8,7 @@ jobs:
       image: immortalwrt/opde:base
     steps:
       - name: Checkout
-        uses: actions/checkout@openwrt-21.02
+        uses: actions/checkout@v3
       - name: pack_install
         run: |
           ./scripts/feeds update -a && ./scripts/feeds install -a
