--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,6 +7,8 @@ jobs:
     container:
       image: immortalwrt/opde:base
       options: --user 1001
+      env:
+        TERM: xterm
     steps:
       - name: Checkout
         uses: actions/checkout@v3
